DTOs objects for displaying class schedule + unit tests